@@ -951,7 +951,10 @@ operator|.
 name|getWorkingRevision
 argument_list|()
 else|:
+name|normalizeRevision
+argument_list|(
 name|revision
+argument_list|)
 expr_stmt|;
 name|setStandardAttribute
 argument_list|(
@@ -1768,6 +1771,66 @@ block|{
 return|return
 name|branch
 return|;
+block|}
+comment|/**      * [revision] is a valid revision in maven. This method strips the '[' and ']'      * characters. Cfr. http://docs.codehaus.org/x/IGU      */
+specifier|private
+specifier|static
+name|String
+name|normalizeRevision
+parameter_list|(
+name|String
+name|revision
+parameter_list|)
+block|{
+if|if
+condition|(
+name|revision
+operator|.
+name|startsWith
+argument_list|(
+literal|"["
+argument_list|)
+operator|&&
+name|revision
+operator|.
+name|endsWith
+argument_list|(
+literal|"]"
+argument_list|)
+operator|&&
+name|revision
+operator|.
+name|indexOf
+argument_list|(
+literal|','
+argument_list|)
+operator|==
+operator|-
+literal|1
+condition|)
+block|{
+return|return
+name|revision
+operator|.
+name|substring
+argument_list|(
+literal|1
+argument_list|,
+name|revision
+operator|.
+name|length
+argument_list|()
+operator|-
+literal|1
+argument_list|)
+return|;
+block|}
+else|else
+block|{
+return|return
+name|revision
+return|;
+block|}
 block|}
 block|}
 end_class
